fix: header-features wrap

--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ body {
 
 .header-features {
   display: flex;
+  flex-wrap: wrap;
   min-height: 10.5rem;
   padding: 0;
   margin-top: 6.25rem;
@@ -225,6 +226,7 @@ body {
 
 .steps {
   display: flex;
+  flex-wrap: wrap;
   padding: 0;
   list-style: none;
   gap: 1.875rem;
